# projectguard-mcp

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  WINDOWS_SETUP.md  docker-compose.yml  pyproject.toml  run_projectguard.py
.github/workflows/: ci.yml
docker/: Dockerfile
docs/: AGENT_WORKFLOW.md  CLIENT_SETUP.md  PAID_LAUNCH_GUARD.md  PRODUCTION_PLAN.md
examples/claude-code/: .mcp.json  CLAUDE.md
examples/codex/: AGENTS.md  config-http.toml  config-stdio.toml  config.toml
scripts/: run_projectguard.cmd  run_projectguard.ps1  setup_windows.cmd  setup_windows.ps1
src/projectguard_mcp/: __init__.py  __main__.py  cli.py  config.py  models.py  rules.py  scoring.py  server.py  utils.py
src/projectguard_mcp/reviewers/: __init__.py  anti_slop.py  api_security.py  classifier.py  code_quality.py  docker_security.py  file_plan.py  paid_launch.py  payment_webhooks.py  project_request.py  security.py  security_recommender.py  seo.py  session_gaps.py  ux.py
tests/: test_anti_slop.py  test_classifier.py  test_code_quality.py  test_edge_cases.py  test_file_plan.py  test_integration.py  test_paid_launch.py  test_project_request.py  test_scoring.py  test_security.py  test_security_skills_guard.py  test_seo.py  test_session_gaps.py  test_ux.py
