[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "projectguard-mcp"
version = "0.3.0"
description = "MCP quality gate that prevents AI agents from building sloppy apps, websites, and SaaS products."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "lr2bmail" }]
dependencies = [
    "mcp[cli]>=1.9.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0"
]

[project.scripts]
projectguard-mcp = "projectguard_mcp.server:main"
projectguard-check = "projectguard_mcp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"run_projectguard.py" = ["E402", "I001"]